app/assets/stylesheets/zammad.scss
/* ... */
.output-input {
  margin: 0 0 14px;

  output {
    margin: 0;
    border-radius: 3px 3px 0 0;
    border: 1px solid hsl(200,71%,59%);
    border-bottom: none;
    display: block;
  }

  input {
    flex: 1;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-top: none;

    &:focus {
      border-color: hsl(0,0%,90%);
      box-shadow: none;
    }
  }
}

output {
  border-bottom: 1px solid hsl(200,71%,59%);
  margin: 14px 0 0;
  display: inline-block;
  padding: 10px 12px 8px;
  background: hsl(201,62%,93%);
  
  &[disabled] {
    border-color: hsl(358,53%,56%);
    background: hsl(358,53%,76%);
  }
}

.zammad-switch label {
  position: relative;
  width: 48px;
  height: 30px;
  border-radius: 15px;
  outline: none;
  cursor: pointer;
  background: hsl(0,0%,90%);
  transition: background 400ms;
}

.zammad-switch input {
  display: none;
}

.zammad-switch input:checked + label {
  background: hsl(200,71%,59%);
}

.zammad-switch input:focus + label {
  transition: none;
  background: hsl(200,71%,59%);
  box-shadow: 0 0 0 3px hsl(201,62%,90%);
}

.zammad-switch label:after,
.zammad-switch label:before {
  content: "";
  position: absolute;
  transition: 200ms;
}

.zammad-switch label:before {
  width: 46px;
  height: 28px;
  left: 1px;
  top: 1px;
  border-radius: inherit;
  background: hsl(210,17%,99%);
  transform-origin: right;
}

.zammad-switch input:checked + label:before {
  transform: scaleX(0);
  opacity: 0;
}

.zammad-switch label:after {
  width: 28px;
  height: 28px;
  border-radius: 100%;
  left: 1px;
  top: 1px;
  box-shadow: 
    0 0 0 1px rgba(0,0,0,.05),
    0 1px 3px rgba(0,0,0,.2);
  background: white;
}

.zammad-switch input:checked + label:after {
  transform: translateX(18px);
}

.horizontal-filter-text {
  margin-right: 5px;
}

.filter-controls {
  display: flex;
  align-items: center;
}

.filter-control {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 30px;
  height: 30px;
  box-shadow: 0 0 0 1px hsl(198,19%,86%) inset;
  border-radius: 100%;
  background: white;
  cursor: pointer;
  
  &:hover:not(.is-disabled) {
    border-color: hsl(198,19%,83%);
    
    .icon {
      fill: black;
    }
  }

  &.is-disabled {
    cursor: not-allowed;
    opacity: 0.5;
  }
  
  &:not(:last-child) {
    margin-right: 7px;
  }
  
  .icon {
    fill: hsl(0,0%,61%);
  }
}

.filter-preview {
  margin: 20px 0;
}

.day-name {
  text-align: center;
  margin-bottom: 0;
  color: inherit;
  white-space: nowrap;
}

.form-group.day-time {
  padding: 10px 5px 6px;
  margin: 0;
  
  label {
    text-align: center; 
  }

  .form-control {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 8px;
  }
}

.settings-row {
  margin-bottom: 10px;
}

.settings-list {
  border-collapse: separate;
  color: hsl(60,1%,34%);
  background: white;
  table-layout: auto;
  
  &.is-invalid {
    border-radius: 3px;
    box-shadow: 
      0 0 0 2px white,
      0 0 0 4px hsl(0,90%,70%);
  }
  
  &.settings-list--stretch {
    width: 100%;
  }
  
  &:not(:last-child) {
    margin-bottom: 34px;
  }

  &.settings-list--toggleRow {
    tr:not(.is-active) td > *:not(.dont-grey-out) {
      opacity: 0.33;
    }
  }

  &.settings-list--toggleColumn {
    td:not(.is-active) * {
      opacity: 0.33;
    }
  }
  
  th, td {
    padding: 10px;
    border: 1px solid hsl(198,18%,86%);
  }
  
  th {
    font-weight: normal;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 0.05em;
    background: hsl(197,20%,93%);
    border-bottom: none;
  }

  td.empty-cell {
    border-top: none;
  }

  .text-muted {
    text-transform: none;
    font-size: 10px;
    letter-spacing: 0;
    color: hsl(198,18%,72%);
  }

  .btn--table {
    margin: 0;
  }

  .btn.btn--text:not(.btn--secondary) {
    color: hsl(60,1%,61%);
  }

  .btn .icon {
    fill: hsl(60,1%,61%);
  }

  th:not(:last-child),
  td:not(:last-child) {
    border-right: none;
  }

  tr:not(:last-child) td {
    border-bottom: none;
  }

  tr.is-inactive td {
    color: hsl(199,19%,80%);
    text-decoration: line-through;
  }

  thead th:first-child {
    border-top-left-radius: 4px;
  }

  thead th:last-child {
    border-top-right-radius: 4px;
  }

  tbody tr:last-child td:first-child {
    border-bottom-left-radius: 4px;
  }

  tbody tr:last-child td:last-child {
    border-bottom-right-radius: 4px;
  }

  p {
    margin: 0;
  }

  .settings-list-action-cell {
    @extend .u-clickable;
    text-align: center;
    background: hsl(197,22%,96%);
    line-height: 1;
    
    &:hover {
      .icon {
        fill: hsl(60,1%,34%);
      }
    }
    
    .icon {
      fill: hsl(198,19%,72%);
      vertical-align: top;
    }
  }

  .settings-list-controlRow {
    td {
      padding: 5px;
    }
  }
}


.select-boxes {
  display: flex;
  align-items: flex-start;
}
/* ... */

